--- a/core-interaction/collection/sansserif.css
+++ b/core-interaction/collection/sansserif.css
@@ -6,7 +6,11 @@ body {
   color: white;
   overflow: hidden;
 }
-
+input[type="text"] {
+  font-family: Alegreya Sans;
+  font-size: 20px;
+  opacity: .5;
+}
 .alegreya_sans{
   font-family: Alegreya Sans;
   margin-left: 200px;
