--- a/core-interaction/collection/monospace.css
+++ b/core-interaction/collection/monospace.css
@@ -5,6 +5,11 @@ body {
   padding: 0;
   color: white;
 }
+input[type="text"] {
+  font-family: Inconsolata;
+  font-size: 20px;
+  opacity: .5;
+}
 .roboto_mono {
   font-family: Roboto Mono;
   margin-left: 200px;
