--- a/core-interaction/site interface/map.css
+++ b/core-interaction/site interface/map.css
@@ -1,6 +1,8 @@
 
 body{
   background-color: yellow;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 p {
@@ -13,44 +15,23 @@ p {
   top: 40px;
   border background-color: black;
 }
-#
-}
 
-#s2 {
-  top: 30px;
-  position: absolute;
+#map3d {
   visibility: hidden;
+  padding-top: 300px;
+  padding-right: 10px;
 }
 
-#Music {
+#s1 {
   position: absolute;
-  bottom: 390px;
-  height: 40px;
-  left: 20px;
-  width: 60px;
-  border-radius: 40px;
-  font-size: 20px;
-  font-family: 'Inconsolata', monospace;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 10px;
-  margin: 10px;
-  position: relative;
-  display: inline-block;
-  background-color:red;
-  justify-content: center;
-  transition:background-color 0.2s;
-  text-shadow: 0px 3px black;
-}
-#Music:active {
-background-color: #666666;
-text-decoration: underline #e1e8f0;
-  font-weight: bold;
-  text-shadow: 0px 0px;
+  height: 20px;
+  width: 20px;
+  background-color: green;
 }
 
 #map2 {
-  bottom: 390px;
+  position: fixed;
+  bottom: 750px;
   height: 40px;
   left: 20px;
   width: 40px;
@@ -69,14 +50,8 @@ text-decoration: underline #e1e8f0;
   text-shadow: 0px 3px black;
 }
 #map2:active {
-background-color: #666666;
+background-color: pink;
 text-decoration: underline #e1e8f0;
   font-weight: bold;
   text-shadow: 0px 0px;
-}
-
-#map3d {
-  visibility: hidden;
-  padding-top: 300px;
-  padding-right: 10px;
 }
