--- a/core-interaction/site interface/map.css
+++ b/core-interaction/site interface/map.css
@@ -8,7 +8,7 @@ body{
 p {
   font-family: 'Inconsolata', monospace;
   font-size: 40px;
-  left: 40px;
+  left: 20px;
   bottom: 400px;
   position: fixed;
   color: black;
@@ -22,12 +22,6 @@ p {
   padding-right: 10px;
 }
 
-#s1 {
-  position: absolute;
-  height: 20px;
-  width: 20px;
-  background-color: green;
-}
 
 #map2 {
   position: fixed;
@@ -48,6 +42,48 @@ p {
   justify-content: center;
   transition:background-color 0.2s;
   text-shadow: 0px 3px black;
+}
+
+#whereyouare {
+  position: fixed;
+  bottom: 750px;
+  left: 20px;
+  height: 60px;
+  width: 100px;
+  border-radius: 40px;
+  font-size: 20px;
+  font-family: 'Inconsolata', monospace;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 5px;
+  margin: 5px;
+  position: relative;
+  display: inline-block;
+  background-color:red;
+  justify-content: center;
+  transition:background-color 0.2s;
+  text-shadow: 0px 3px black;
+}
+#sound {
+  position: fixed;
+  bottom: 750px;
+  left: 20px;
+  height: 60px;
+  width: 100px;
+  border-radius: 40px;
+  font-size: 20px;
+  font-family: 'Inconsolata', monospace;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 5px;
+  margin: 5px;
+  position: relative;
+  display: inline-block;
+  background-color:red;
+  justify-content: center;
+  transition:background-color 0.2s;
+  text-shadow: 0px 3px black;
+
 }
 #map2:active {
 background-color: pink;
