--- a/core-interaction/site interface/map.css
+++ b/core-interaction/site interface/map.css
@@ -1,11 +1,11 @@
 
 body{
-  background-color: yellow;
+  background-color: white;
   overflow-x: hidden;
   overflow-y: hidden;
 }
 
-p {
+h1{
   font-family: 'Inconsolata', monospace;
   font-size: 40px;
   left: 20px;
@@ -14,6 +14,15 @@ p {
   color: black;
   top: 40px;
   border background-color: black;
+}
+h2{
+    font-family: 'Inconsolata', monospace;
+  font-size: 20px;
+  left: 20px;
+  bottom: 400px;
+  position: fixed;
+  color: black;
+  top: 190px;
 }
 
 #map3d {
@@ -25,8 +34,8 @@ p {
 
 #map2 {
   position: fixed;
-  bottom: 750px;
-  height: 40px;
+  bottom: 700px;
+  height: 30px;
   left: 20px;
   width: 40px;
   border-radius: 40px;
@@ -38,20 +47,19 @@ p {
   margin: 10px;
   position: relative;
   display: inline-block;
-  background-color:red;
+  background-color:white;
   justify-content: center;
   transition:background-color 0.2s;
-  text-shadow: 0px 3px black;
 }
 
 #whereyouare {
   position: fixed;
-  bottom: 750px;
+  bottom: 700px;
   left: 20px;
-  height: 60px;
+  height: 40px;
   width: 100px;
   border-radius: 40px;
-  font-size: 20px;
+  font-size: 15px;
   font-family: 'Inconsolata', monospace;
   padding-left: 10px;
   padding-right: 10px;
@@ -59,17 +67,16 @@ p {
   margin: 5px;
   position: relative;
   display: inline-block;
-  background-color:red;
+  background-color:white;
   justify-content: center;
-  transition:background-color 0.2s;
-  text-shadow: 0px 3px black;
+  transition: background-color 0.2s;
 }
 #sound {
   position: fixed;
-  bottom: 750px;
+  bottom: 700px;
   left: 20px;
-  height: 60px;
-  width: 100px;
+  height: 30px;
+  width: 70px;
   border-radius: 40px;
   font-size: 20px;
   font-family: 'Inconsolata', monospace;
@@ -79,10 +86,9 @@ p {
   margin: 5px;
   position: relative;
   display: inline-block;
-  background-color:red;
+  background-color:white;
   justify-content: center;
   transition:background-color 0.2s;
-  text-shadow: 0px 3px black;
 
 }
 #map2:active {
@@ -90,4 +96,64 @@ background-color: pink;
 text-decoration: underline #e1e8f0;
   font-weight: bold;
   text-shadow: 0px 0px;
+}
+#whereyouare:active {
+background-color: pink;
+text-decoration: underline #e1e8f0;
+  font-weight: bold;
+  text-shadow: 0px 0px;
+}
+#sound:active {
+background-color: pink;
+text-decoration: underline #e1e8f0;
+  font-weight: bold;
+  text-shadow: 0px 0px;
+}
+#red {
+  top: 600px;
+  left: 10px;
+  position: absolute;
+  visibility: hidden;
+}
+#orange {
+  top: 600px;
+  left: 10px;
+  position: absolute;
+  visibility: hidden;
+}
+#yellow {
+  top: 600px;
+  left: 10px;
+  position: absolute;
+  visibility: hidden;
+}
+#green {
+  top: 600px;
+  left: 10px;
+  position: absolute;
+  visibility: hidden;
+}
+#blue {
+  top: 600px;
+  left: 10px;
+  position: absolute;
+  visibility: hidden;
+}
+#purple {
+  top: 600px;
+  left: 10px;
+  position: absolute;
+  visibility: hidden;
+}
+#brown {
+  top: 600px;
+  left: 10px;
+  position: absolute;
+  visibility: hidden;
+}
+#playlist {
+  top: 400px;
+  position: absolute;
+  left: 10px;
+  visibility: hidden;
 }
