--- a/core-interaction/style.css
+++ b/core-interaction/style.css
@@ -1,5 +1,5 @@
 body{
-  background-color: lightcoral;
+  background-color: black;
 }
 
 h1{
@@ -8,14 +8,24 @@ h1{
   border:20px dotted white;
 }
 
-img {width:300px;
-}
-
 a{
-  font-size:80px;
-  color: yellow;
+  font-size:20px;
+  color: white;
+  font-family: sans-serif;
 }
-
+p {
+  color: white;
+  font-size: 30px;
+}
+ul {
+  top: 170px;
+  left: 30px;
+  padding-left: 30px;
+  position: relative;
+}
+video {
+  opacity: 0.3;
+}
 #good{
   background-color: lightyellow;
 }
