--- a/core-interaction/style.css
+++ b/core-interaction/style.css
@@ -18,25 +18,34 @@ p {
   font-size: 30px;
 }
 ul {
-  top: 170px;
   left: 30px;
   padding-left: 30px;
   position: relative;
 }
-video {
-  opacity: 0.3;
-}
-#good{
-  background-color: lightyellow;
+<style>
+* {
+    box-sizing: border-box;
 }
 
-#evil{
-  background-color:lightgreen;
+body {
+    margin: 0;
+    font-family: Arial;
+    font-size: 17px;
 }
 
-.na{
-  font-family: fantasy;
+#myVideo {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
 }
-.sa{
-  font-family: Helvetica;
+
+.content {
+    position: fixed;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
+    color: #f1f1f1;
+    width: 100%;
+    padding: 20px;
 }
