--- a/core-interaction/style.css
+++ b/core-interaction/style.css
@@ -40,3 +40,39 @@ body {
     width: 100%;
     padding: 20px;
 }
+.navigation {
+  width: 150px;
+}
+.mainmenu, .submenu {
+  list-style: none;
+  padding: 0px;
+  margin:0px;
+
+}
+
+.mainmenu a {
+  display: block;
+  background-color: #056571;
+  text-decoration: none;
+  padding: 10px;
+  color: white;
+}
+.mainmenu a:hover {
+    background-color: #0F1626;
+}
+.mainmenu li:hover .submenu {
+  display: block;
+  max-height: 200px;
+}
+.submenu a {
+  background-color: #CCDFCB;
+}
+.submenu a:hover {
+  background-color: #0F1626;
+}
+
+.submenu {
+  overflow: hidden;
+  max-height: 0;
+  -webkit-transition: all 0.5s ease-out;
+}
